<resources>
<string name="empty"></string>
<string name="placeholder_number">: 12</string>
<string name="lorem_ipsum_xl">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
<string name="lorem_ipsum">Lorem ipsum dolor</string>
<string name="url">URL</string>
<string name="url_go">Go</string>
<string name="not_implemented">Not implemented</string>
<string name="more">More</string>
<string name="EmailInvalid"><![CDATA[Your email address appears to be invalid.]]></string>
<string name="BirthdayInvalid"><![CDATA[Your birthday appears to be incorrect.]]></string>
<string name="AccountCreationFloodcheck"><![CDATA[You have made too many accounts. Please wait before making more.]]></string>
<string name="UnexpectedError"><![CDATA[Sorry! An unexpected error occured: %s.]]></string>
<string name="PasswordWrongAndroid"><![CDATA[Password must contain 6-20 characters with at least 2 numbers.]]></string>
<string name="TermsLicensingPrivacy"><![CDATA[<a href=\'http://www.roblox.com/info/terms-of-service\'>Terms of Service</a> - <a href=\'http://www.roblox.com/info/EULA.htm\'>Licensing Agreement</a> - <a href=\'http://www.roblox.com/Info/Privacy.aspx?layout=null\'>Privacy Policy</a>]]></string>
<string name="SearchWord">Search</string>
<string name="SearchUsersWord">Search users...</string>
<string name="SignupFinePrintAndroid"><![CDATA[By tapping \'Sign up\' above, you are agreeing to our <a href=\'http://www.roblox.com/info/terms-of-service\'>Terms of Service</a>, <a href=\'http://www.roblox.com/info/EULA.htm\'>Licensing Agreement</a>, and <a href=\'http://www.roblox.com/Info/Privacy.aspx?layout=null\'>Privacy Policy</a>.]]></string>
<string name="LoggedOut">You have been logged out.</string>
<string name="GroupsWord">Groups</string>
<string name="LeaderboardsWord">Leaderboards</string>
<string name="RateMeDialogTitle">Please rate this app</string>
<string name="RateMeDialogMessage">We would really appreciate you rating ROBLOX on the Play store.</string>
<string name="RateMeRateIt">Rate it</string>
<string name="RateMeNever">Never</string>
<string name="RateMeNotNow">Not now</string>
<string name="InvalidCharactersUsed">Username contains invalid characters.</string>
<string name="UsernameCannotContainSpaces">Username cannot contain spaces</string>
<string name="UnsupportedDevice"><![CDATA[Sorry, your device does not meet the minimum requirements to play games.]]></string>
<string name="UnsupportedDeviceSkippable"><![CDATA[Warning: Your device may not be powerful enough to play games smoothly.]]></string>
<string name="CrashFound">The game did not end correctly.  You may need a Software Update.  See the Settings section About Device.</string>
<string name="RobuxWord"><![CDATA[Robux]]></string>
<string name="TicketsWord"><![CDATA[Tickets]]></string>
<string name="DefaultDeviceBlacklist"><![CDATA[XT1080,Nexus 7,SMÃ‚Â¬?-T210R,SM-T320]]></string>
<string-array name="GenderArray">
	<item>Choose one</item>
	<item>Male</item>
	<item>Female</item>
</string-array>
<string-array name="EnvironmentArray">
    <item>www.roblox.com/</item>
    <item>www.gametest1.robloxlabs.com/</item>
    <item>www.gametest2.robloxlabs.com/</item>
    <item>www.gametest3.robloxlabs.com/</item>
    <item>www.gametest4.robloxlabs.com/</item>
    <item>www.gametest5.robloxlabs.com/</item>
    <item>www.sitetest1.robloxlabs.com/</item>
    <item>www.sitetest2.robloxlabs.com/</item>
    <item>www.sitetest3.robloxlabs.com/</item>
    <item>www.sitetest4.robloxlabs.com/</item>
    <item>allen.sitetest3.robloxlabs.com/</item>
    <item>anthony.sitetest3.robloxlabs.com/</item>
    <item>alex.sitetest3.robloxlabs.com/</item>
    <item>baker.sitetest3.robloxlabs.com/</item>
    <item>ernie.sitetest3.robloxlabs.com/</item>
    <item>guru.sitetest3.robloxlabs.com/</item>
    <item>rosemary.sitetest3.robloxlabs.com/</item>
    <item>antoni.sitetest3.robloxlabs.com/</item>
    <item>isaiah.sitetest3.robloxlabs.com/</item>
    <item>akshay.sitetest3.robloxlabs.com/</item>
    <item>ying.sitetest3.robloxlabs.com/</item>
    <item>wooldridge.sitetest3.robloxlabs.com/</item>
    <item>je.sitetest3.robloxlabs.com/</item>
    <item>jeremy.sitetest3.robloxlabs.com/</item>
    <item>manika.sitetest3.robloxlabs.com/</item>
    <item>linjun.sitetest3.robloxlabs.com/</item>
    <item>shailendra.sitetest3.robloxlabs.com/</item>


</string-array>
<string-array name="EnvironmentArrayMobile">
    <item>m.roblox.com/</item>
    <item>m.gametest1.robloxlabs.com/</item>
    <item>m.gametest2.robloxlabs.com/</item>
    <item>m.gametest3.robloxlabs.com/</item>
    <item>m.gametest4.robloxlabs.com/</item>
    <item>m.gametest5.robloxlabs.com/</item>
    <item>m.sitetest1.robloxlabs.com/</item>
    <item>m.sitetest2.robloxlabs.com/</item>
    <item>m.sitetest3.robloxlabs.com/</item>
    <item>m.sitetest4.robloxlabs.com/</item>
    <item>allen.sitetest3.robloxlabs.com/</item>
    <item>anthony.sitetest3.robloxlabs.com/</item>
    <item>alex.sitetest3.robloxlabs.com/</item>
    <item>baker.sitetest3.robloxlabs.com/</item>
    <item>ernie.sitetest3.robloxlabs.com/</item>
    <item>guru.sitetest3.robloxlabs.com/</item>
    <item>rosemary.sitetest3.robloxlabs.com/</item>
    <item>antoni.sitetest3.robloxlabs.com/</item>
    <item>isaiah.sitetest3.robloxlabs.com/</item>
    <item>akshay.sitetest3.robloxlabs.com/</item>
    <item>ying.sitetest3.robloxlabs.com/</item>
    <item>wooldridge.sitetest3.robloxlabs.com/</item>
    <item>je.sitetest3.robloxlabs.com/</item>
    <item>jeremy.sitetest3.robloxlabs.com/</item>
    <item>manika.sitetest3.robloxlabs.com/</item>
    <item>linjun.sitetest3.robloxlabs.com/</item>
    <item>shailendra.sitetest3.robloxlabs.com/</item>
</string-array>
<string name="UsernameWord"><![CDATA[Username]]></string>
<string name="PasswordWord"><![CDATA[Password]]></string>
<string name="LogoutConfirmation"><![CDATA[Do you want to log out?]]></string>
<string name="LoginFailedTitle"><![CDATA[Login Failed - %s]]></string>
<string name="RememberPassword"><![CDATA[Remember Password]]></string>
<string name="UsernameRequirements"><![CDATA[3-20 alphanumeric characters, no spaces]]></string>
<string name="UsernameRequirementsShort"><![CDATA[3-20 characters]]></string>
<string name="PasswordRequirements"><![CDATA[6-20 characters with at least 2 numbers]]></string>
<string name="PasswordRequirementsShort"><![CDATA[6-20 characters]]></string>
<string name="GenderWord"><![CDATA[Gender]]></string>
<string name="SelectWord"><![CDATA[Select]]></string>
<string name="BirthdayWord"><![CDATA[Birthday]]></string>
<string name="BirthdayRequirements"><![CDATA[Select Your Birthday]]></string>
<string name="EmailWord"><![CDATA[Email]]></string>
<string name="EmailRequirements"><![CDATA[(optional)]]></string>
<string name="EmailRequirementsUnder13">Parent\'s Email</string>
<string name="SignupWord"><![CDATA[SIGNUP]]></string>
<string name="SignupWordSpace">SIGN UP</string>
<string name="SignupLower">Sign Up</string>
<string name="SignupCreateUsername">Create</string>
<string name="ChooseOne"><![CDATA[Choose one]]></string>
<string name="GenderBoy"><![CDATA[Boy]]></string>
<string name="GenderGirl"><![CDATA[Girl]]></string>
<string name="EntryIncorrectTitle"><![CDATA[Please Check Entries]]></string>
<string name="EntryIncorrectBody"><![CDATA[One or more of the fields are incorrect or empty.]]></string>
<string name="VerifyWord"><![CDATA[Verify]]></string>
<string name="VerifyRequirements"><![CDATA[Retype Password]]></string>
<string name="SignupFinePrint"><![CDATA[By tapping \'Sign up\' above, you are agreeing to our &lt;a href=\'http://www.roblox.com/info/terms-of-service\'&gt;Terms of Service&lt;/a&gt;, &lt;a href=\'http://www.roblox.com/info/EULA.htm\'&gt;Licensing Agreement&lt;/a&gt;, and &lt;a href=\'http://www.roblox.com/Info/Privacy.aspx?layout=null\'&gt;Privacy Policy&lt;/a&gt;.  We will not share your information with third parties.]]></string>
<string name="DoneWord"><![CDATA[Done]]></string>
<string name="NextWord"><![CDATA[Next]]></string>
<string name="SelectBirthday"><![CDATA[Select Birthday]]></string>
<string name="SelectGender"><![CDATA[Select Gender]]></string>
<string name="CloseWord"><![CDATA[Close]]></string>
<string name="SigningUp"><![CDATA[Signing Up...]]></string>
<string name="RegisteringWord">Registering</string>
<string name="VerifyError"><![CDATA[This password does not match the original password you entered.]]></string>
<string name="FieldsIncomplete"><![CDATA[Not all required fields are filled]]></string>
<string name="NoSignupUsernameError"><![CDATA[No username was entered, please enter a username.]]></string>
<string name="NoSignupPasswordError"><![CDATA[No password specified, please enter a password.]]></string>
<string name="NoSignupVerifyPasswordError"><![CDATA[Password was not verified, please enter password in \'Verify\' field.]]></string>
<string name="NoSignupBirthdayError"><![CDATA[No birthday specified, please select a birthday.]]></string>
<string name="NoSignupGenderError"><![CDATA[No gender specified, please select a gender.]]></string>
<string name="PasswordNoMatch"><![CDATA[Passwords do not match.  Please retype your password.]]></string>
<string name="UsernameTaken"><![CDATA[This username is already taken!]]></string>
<string name="UsernameTakenSuggestion"><![CDATA[This username is already taken! Try \"%s\" instead!]]></string>
<string name="UsernameExplicit"><![CDATA[This username is not allowed, please try another.]]></string>
<string name="VerifyPasswordWrong"><![CDATA[The verify password does not match the password.]]></string>
<string name="UsernameTooShort"><![CDATA[Username is too short. Please select a name that is 3-20 alphanumeric characters.]]></string>
<string name="UsernameTooLong"><![CDATA[Username is too long. Please select a name that is 3-20 alphanumeric characters.]]></string>
<string name="PasswordTooLong">Password is too long. Please use a password that is less than 20.</string>
<string name="PasswordTooShort">Password is too short. Please use a password that is longer than 4 characters.</string>
<string name="SignupXBOXUsernameTooShort">Names can be 3 to 20 characters long.</string>
<string name="SignupXBOXUsernameTooLong">Names can be 3 to 20 characters long.</string>
<string name="SignupXBOXUsernameInvalidCharacters">Only a-z, A-Z, 0-9, and _ are allowed.</string>
<string name="SignupXBOXUsernameInvalidFirstOrLastCharacter">Username can’t start or end with _.</string>
<string name="SignupXBOXUsernameInvalidDoubleUnderscore">Usernames can have at most one _.</string>
<string name="SignupXBOXPasswordIsUsername">Password must not be your username.</string>
<string name="SignupXBOXPasswordTooShort">Must be at least 8 characters long.</string>
<string name="LoginWord"><![CDATA[LOGIN]]></string>
<string name="LoginWordLower"><![CDATA[Login]]></string>
<string name="UnknownLoginFailure"><![CDATA[Login Failure - Unknown error!]]></string>
<string name="LoggingIn"><![CDATA[Logging in]]></string>
<string name="PlayNowButtonLabel"><![CDATA[Play Now]]></string>
<string name="HomeWord"><![CDATA[Home]]></string>
<string name="GameWord"><![CDATA[Games]]></string>
<string name="CatalogWord"><![CDATA[Catalog]]></string>
<string name="InventoryWord"><![CDATA[Inventory]]></string>
<string name="BuildersClubWord"><![CDATA[Builders Club]]></string>
<string name="ProfileWord"><![CDATA[Profile]]></string>
<string name="MessagesWord"><![CDATA[Messages]]></string>
<string name="MessagesWordPhone">MSGs</string>
<string name="CommunityWord"><![CDATA[Community]]></string>
<string name="LoginButton"><![CDATA[Login]]></string>
	<string name="CancelWord"><![CDATA[Cancel]]></string>
<string name="ValuePageMessages">Talk to your friends and view your message history. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
</resources>