<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/SearchUsersWord"
        android:icon="@drawable/icon_search_white"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/action_robux"
        android:title="@string/RobuxWord"
        app:actionLayout="@layout/button_robux_layout"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_tickets"
        android:title="@string/TicketsWord"
        app:actionLayout="@layout/button_bc_layout"
        app:showAsAction="ifRoom"/>

    <!--<item
        android:id="@+id/action_logout"
        android:title="@string/LogoutWord"
        android:actionLayout="@layout/button_logout_layout"
        app:showAsAction="never"/>-->

</menu>