<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_sign_up_background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="0"
    android:background="@color/shell_dialog_background"
    android:orientation="vertical" >

    <!-- top bar -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/shell_dialog_bar"
        android:orientation="horizontal"
        android:padding="15dp" >
        <TextView
            android:id="@+id/fragment_sign_up_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/CancelWord"
            android:textColor="@color/shell_text_link"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SignupWord"
            android:textColor="@color/shell_text_normal"
            android:textSize="20sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/fragment_sign_up_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LoginButton"
            android:textColor="@color/shell_text_link"
            android:textSize="20sp"
            android:gravity="right"
            android:layout_gravity="right" />

    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/UsernameWord"
                android:textColor="@color/shell_text_normal"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/fragment_sign_up_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:hint="@string/UsernameRequirements"
                android:imeOptions="actionNext"
                android:inputType="text|textNoSuggestions"
                android:text="@string/empty"
                android:textColorHint="@color/shell_text_hint"
                style="@style/LoginEditTextTheme" />
            <ImageView
                android:id="@+id/fragment_sign_up_username_checked"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/empty" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/PasswordWord"
                android:textColor="@color/shell_text_normal"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/fragment_sign_up_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:hint="@string/PasswordRequirements"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:text="@string/empty"
                android:textColorHint="@color/shell_text_hint"
                style="@style/LoginEditTextTheme" />
            <ImageView
                android:id="@+id/fragment_sign_up_password_checked"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/empty" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/VerifyWord"
                android:textColor="@color/shell_text_normal"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/fragment_sign_up_password_verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:hint="@string/VerifyRequirements"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@string/empty"
                android:textColorHint="@color/shell_text_hint"
                style="@style/LoginEditTextTheme" />
            <ImageView
                android:id="@+id/fragment_sign_up_password_verify_checked"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/empty" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/GenderWord"
                android:textColor="@color/shell_text_normal"
                android:textSize="20sp" />
            <Spinner
                android:id="@+id/fragment_sign_up_gender_spinner"
                android:layout_marginRight="50dp"
                android:textSize="20sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/Theme.Roblox.DefaultSpinnerItem"
                android:background="@drawable/white_button"
                android:layout_span="2"
                android:layout_marginLeft="10dp" />
        </TableRow>
        <TableRow android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/BirthdayWord"
                android:textColor="@color/shell_text_normal"
                android:textSize="20sp" />
            <Button
                android:id="@+id/fragment_sign_up_birthday"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSizeButton"
                android:text="@string/SelectBirthday"
                style="@style/LoginButtonTheme"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="10dp" />
        </TableRow>
        <TableRow android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/EmailWord"
                android:textColor="@color/shell_text_normal"
                android:textSize="20sp"
                android:id="@+id/signup_email_label" />
            <EditText
                android:id="@+id/fragment_sign_up_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:text="@string/empty"
                android:textColorHint="@color/shell_text_hint"
                style="@style/LoginEditTextTheme" />
            <ImageView
                android:id="@+id/fragment_sign_up_email_checked"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/empty" />
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/fragment_sign_up_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="150dp"
        android:layout_marginLeft="150dp"
        android:textSize="@dimen/textSizeButtonImportant"
        android:text="@string/SignupWord"
        style="@style/LoginButtonTheme" />
    <TextView
        android:id="@+id/fragment_sign_up_agreement"
        android:layout_width="750dp"
        android:layout_height="wrap_content"
        android:ellipsize="none"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:maxLines="100"
        android:gravity="center"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/shell_text_normal"
        android:padding="20dp"
        android:textSize="15sp"/>
</LinearLayout>
