<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_sign_up_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shell_dialog_background"
    android:orientation="vertical" >
    <!-- hack to avoid default focus bringing up keyboard -->
    <!-- top bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/shell_dialog_bar"
        android:orientation="horizontal"
        android:padding="5dp" >
        <TextView
            android:id="@+id/fragment_sign_up_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/CancelWord"
            android:textColor="@color/shell_text_link"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SignupWord"
            android:textColor="@color/shell_text_normal"
            android:textSize="18sp"
            android:textAlignment="center"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/LoginWord"
            android:textColor="@color/shell_text_link"
            android:textSize="18sp"
            android:id="@+id/fragment_sign_up_login"
            android:gravity="right" />
    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:stretchColumns="1" >
        <TableRow android:layout_marginBottom="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/UsernameWord"
                android:textColor="@color/shell_text_normal"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/fragment_sign_up_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:hint="@string/UsernameRequirementsShort"
                android:imeOptions="actionNext"
                android:inputType="text|textNoSuggestions"
                android:text="@string/empty"
                android:textColorHint="@color/shell_text_hint"
                android:textSize="16sp"
                android:width="0dp" />
            <ImageView
                android:id="@+id/fragment_sign_up_username_checked"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/empty" />
        </TableRow>
        <TableRow android:layout_marginBottom="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/PasswordWord"
                android:textColor="@color/shell_text_normal"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/fragment_sign_up_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:hint="@string/PasswordRequirementsShort"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:text="@string/empty"
                android:textColorHint="@color/shell_text_hint"
                android:textSize="16sp"
                android:width="0dp" />
            <ImageView
                android:id="@+id/fragment_sign_up_password_checked"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/empty" />
        </TableRow>
        <TableRow android:layout_marginBottom="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/VerifyWord"
                android:textColor="@color/shell_text_normal"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/fragment_sign_up_password_verify"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:hint="@string/VerifyRequirements"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@string/empty"
                android:textColorHint="@color/shell_text_hint"
                android:textSize="16sp"
                android:width="0dp" />
            <ImageView
                android:id="@+id/fragment_sign_up_password_verify_checked"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/empty" />
        </TableRow>
        <TableRow android:layout_marginBottom="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/GenderWord"
                android:textColor="@color/shell_text_normal"
                android:textSize="16sp" />
            <Spinner
                android:id="@+id/fragment_sign_up_gender_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="16sp"
                android:background="@drawable/white_button" />
        </TableRow>
        <TableRow android:layout_marginBottom="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/BirthdayWord"
                android:textColor="@color/shell_text_normal"
                android:textSize="16sp" />
            <Button
                android:id="@+id/fragment_sign_up_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/SelectBirthday"
                android:textSize="@dimen/textSizeButton" />
        </TableRow>
        <TableRow android:layout_marginBottom="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/EmailWord"
                android:textColor="@color/shell_text_normal"
                android:textSize="16sp"
                android:id="@+id/signup_email_label" />
            <EditText
                android:id="@+id/fragment_sign_up_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:text="@string/empty"
                android:textColorHint="@color/shell_text_hint"
                android:textSize="16sp"
                android:width="0dp" />
            <ImageView
                android:id="@+id/fragment_sign_up_email_checked"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/empty" />
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/fragment_sign_up_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/SignupWord"
        android:textSize="@dimen/textSizeButtonImportant" />
    <TextView
        android:id="@+id/fragment_sign_up_agreement"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ellipsize="none"
        android:gravity="center"
        android:maxLines="100"
        android:padding="20dp"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:text="@string/lorem_ipsum_xl"
        android:textColor="@color/shell_text_normal"
        android:textSize="16sp" />
</LinearLayout>
