<?xml version="1.0" encoding="utf-8"?>
<com.roblox.client.components.RbxLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rbx_bg_card_shadow_blue_light"
    android:layout_marginLeft="12dp"
    android:layout_marginTop="12dp"
    android:layout_marginRight="12dp"
    android:padding="10dp"
    android:id="@+id/fragment_value_home_card">
    <com.roblox.client.components.RbxTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MessagesWord"
        android:textColor="@color/white"
        android:textSize="@dimen/textSizeSignupHeader"
        style="@style/Theme.Roblox.StandardFontRegular"
        android:layout_marginBottom="10dp"/>
    <com.roblox.client.components.RbxTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ValuePageMessages"
        android:textColor="@color/white"
        android:textSize="@dimen/textSizeSignupLogin"/>
    <com.roblox.client.components.RbxButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/SignupWordSpace"
        android:background="@color/RbxBlue3"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/white"
        android:id="@+id/fragment_value_btn_signup"/>
</com.roblox.client.components.RbxLinearLayout>